# yuuagent_quantum

./: .env.example  .gitignore  README.md  pyproject.toml  yuuskel.toml
scripts/: build_clean_corpus.py  main.py  task.json
src/: __init__.py  build_knowledge.py
src/agents/: aggregator.py  conductor.py  executor.py  guide.py  programmer.py  strategist.py  validator.py  visualizer.py
src/chroma_db/0006912c-bea0-493f-8e6f-6991c76116b0/: index_metadata.pickle
src/config/: manifest.py  slurm_template.py
src/knowledge/: knowledge_db.json  loader.py
src/knowledge/api/: algorithms.txt  core.txt  linalg.txt  models.txt  networks.txt  simulations.txt  tools.txt
src/knowledge/examples/: a_np_conserved.txt  advanced_central_charge_ising.txt  advanced_mpo_exponential_decay.txt  advanced_tfi_phase_transition.txt  advanced_tfi_segment.txt  advanced_vumps_and_plane_wave.txt  advanced_xxz_corr_length.txt  b_mps.txt  c_tebd.txt  chern_insulators_chiral_pi_flux.txt  chern_insulators_haldane.txt  chern_insulators_haldane_C3.txt  chern_insulators_haldane_FCI.txt  d_dmrg.txt  e_tdvp.txt  model_custom.txt  purification.txt  tfi_exact.txt  userguide_a_npc_arrays_triv.txt  userguide_b_npc_arrays.txt  userguide_c_mps_mpo.txt  userguide_d_model_1D.txt  userguide_e_model_2D.txt  userguide_f_dmrg_finite.txt  userguide_g_dmrg_infinite.txt  userguide_h_tebd_infinite.txt  v1_publication_heisenberg_tebd.txt  v1_publication_tfi_cylinder.txt  z_exact_diag.txt
src/knowledge/tutorials/: advanced.txt  algorithms.txt  intro.txt  (+1 more)
src/tools/: base.py  slurm.py
tests/: test_lookup.py
(+2 files in other folders)
